--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,1 +1,9 @@
 // Enter any custom Sass in this file.
+
+.toggle {
+  background-color: #8d8d8d;
+  border-radius: 0.75rem;
+  height: 1.5rem;
+  position: relative;
+  width: 3rem;
+}
