--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,9 +1,50 @@
 // Enter any custom Sass in this file.
 
 .toggle {
-  background-color: #8d8d8d;
-  border-radius: 0.75rem;
-  height: 1.5rem;
   position: relative;
-  width: 3rem;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.toggle span {
+  position: absolute;
+  border-radius: 34px;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.toggle span:before {
+  position: absolute;
+  border-radius: 50%;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .toggle span {
+  background-color: #2196F3;
+}
+
+input:checked + .toggle span:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+input {
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
