--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -5,8 +5,7 @@
       Global data refers to data reported for the UK by the custodian agency.<br><br>
       Turning this on will limit the amount of subcategories you can view at one time.
   </p>
-  <input type="checkbox" id="toggle" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title" class="toggle">
-    <span></span>
-  </button>
+  <input type="checkbox" id="toggle-check" class="toggle" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
+  <label for="toggle-check"></label>
 </div>
   
