--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -39,3 +39,8 @@ input[type="checkbox"].toggle:checked {
   background-color: #2196F3;
 }
 
+input[type="checkbox"].toggle:checked::after {
+  content: "\2713";
+  transform: translateX(100%);
+  background-color: white;
+}
