--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,10 +9,9 @@ input[type="checkbox"].toggle {
 }
 
 input[type="checkbox"].toggle {
-  content: "";
   width: 2em;
   height: 1em;
-  background-color: #ccc;
+  background-color: #8d8d8d;
   border-radius: 1em;
   margin-right: .25em;
   transition: background-color 200ms ease-in-out;
@@ -23,20 +22,19 @@ input[type="checkbox"].toggle::after {
   justify-content: center;
   align-items: center;
   position: absolute;
-  content: "\2715";
   font-size: .5em;
   height: .9em;
   left: .2em;
   width: 1.8em;
   height: 1.8em;
-  background-color: hsl(0, 80%, 60%);
+  background-color: white;
   color: white;
   border-radius: 1em;
   transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
 input[type="checkbox"].toggle:checked {
-  background-color: #2196F3;
+  background-color: #0770e3;
 }
 
 input[type="checkbox"].toggle:checked::after {
