--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -1,4 +1,4 @@
-<div class="compare-toggle">
+<div id="toggles" class="compare-toggle">
   <h4 id="compare-toggle-title">Compare national and global data</h4>
   <p>
       National data refers to data reported by the UK.<br>
