--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -10,7 +10,7 @@ input[type="checkbox"].toggle {
   width: 4rem;
   height: 2rem;
   background-color: #ccc;
-  border-radius: 1em;
+  border-radius: 0.75rem;
   margin-right: .25em;
   transition: background-color 200ms ease-in-out;
 }
@@ -25,7 +25,7 @@ input[type="checkbox"].toggle::after {
   height: 1rem;
   background-color: hsl(0, 80%, 60%);
   color: white;
-  border-radius: 1em;
+  border-radius: 0.75rem;
   transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
