--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -5,6 +5,9 @@
       Global data refers to data reported for the UK by the custodian agency.<br><br>
       Turning this on will limit the amount of subcategories you can view at one time.
   </p>
-  <input type="checkbox" id="toggle-check" class="toggle" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
+  <label for="toggle-check">
+    <input type="checkbox" id="toggle-check" class="toggle" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
+    <span class="label" toggle-on="ON" toggle-off="OFF"</span>
+  <label
 </div>
   
