--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,39 +1,50 @@
 // Enter any custom Sass in this file.
 
-input[type="checkbox"].toggle {
-  appearance: none;
-  position: relative;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  content: "";
-  width: 4rem;
-  height: 2rem;
-  background-color: #ccc;
-  border-radius: 0.75rem;
-  margin-right: .25em;
-  transition: background-color 200ms ease-in-out;
-}
+.toggle {
+      --width: 80px;
+      --height: calc(var(--width) / 3);
 
-input[type="checkbox"].toggle::after {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: .2em;
-  width: 1rem;
-  height: 1rem;
-  background-color: hsl(0, 80%, 60%);
-  color: white;
-  border-radius: 0.75rem;
-  transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
-}
+      position: relative;
+      display: inline-block;
+      width: var(--width);
+      height: var(--height);
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+      border-radius: var(--height);
+      cursor: pointer;
+    }
 
-input[type="checkbox"].toggle:checked {
-  background-color: #2196F3;
-}
+    .toggle input {
+      display: none;
+    }
 
-input[type="checkbox"].toggle:checked::after {
-  transform: translateX(100%);
-  background-color: white;
-}
+    .toggle .slider {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: var(--height);
+      background-color: #ccc;
+      transition: all 0.4s ease-in-out;
+    }
+
+    .toggle .slider::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: calc(var(--height));
+      height: calc(var(--height));
+      border-radius: calc(var(--height) / 2);
+      background-color: #fff;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+      transition: all 0.4s ease-in-out;
+    }
+
+    .toggle input:checked+.slider {
+      background-color: #2196F3;
+    }
+
+    .toggle input:checked+.slider::before {
+      transform: translateX(calc(var(--width) - var(--height)));
+    }
