--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -8,7 +8,7 @@
   <label class="toggle" for="toggle-check">
     <input type="checkbox" id="toggle-check" class="toggle-checkbox" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
     <span class="slider"></span>
-    <span class="label" toggle-on="ON" toggle-off="OFF"</span>
+    <span class="selected" toggle-on="ON" toggle-off="OFF"</span>
   <label>
 </div>
   
