--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -9,6 +9,6 @@
     <input type="checkbox" id="toggle-check" class="toggle-checkbox" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
     <span class="slider"></span>
     <span class="selected" toggle-on="ON" toggle-off="OFF"</span>
-  <label>
+  </label>
 </div>
   
