--- a/_includes/components/indicator/compare-toggle.html
+++ b/_includes/components/indicator/compare-toggle.html
@@ -5,9 +5,9 @@
       Global data refers to data reported for the UK by the custodian agency.<br><br>
       Turning this on will limit the amount of subcategories you can view at one time.
   </p>
-  <label class="toggle" for="toggle-check">
-    <input type="checkbox" id="toggle-check" class="toggle-checkbox" role="switch" aria-checked="false" aria-labelledby="compare-toggle-title">
-    <span class="slider"></span>
+  <label for="toggle">
+    <input class="input" type="checkbox" id="toggle" role="switch" aria-checked="false" />
+    <div class="toggle-wrapper"><span class="selector"></span></div>
     <span class="selected" toggle-on="ON" toggle-off="OFF"</span>
   </label>
 </div>
