--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -13,7 +13,7 @@ label .input:checked + .toggle-wrapper > .selector {
   left: calc(100% - 50px);
   background-color: #3957ee;
 }
-label .input:checked ~ .notification > .selected:before {
+label .input:checked > .selected:before {
   content: "Yes";
 }
 label .toggle-wrapper {
@@ -42,7 +42,7 @@ label .notification {
   font-size: 20px;
   width: 100%;
 }
-label .notification .selected:before {
+label .selected:before {
   content: "No";
   font-size: 20px;
   border-bottom: 2px solid;
