--- a/_includes/components/indicator/category-select-template.html
+++ b/_includes/components/indicator/category-select-template.html
@@ -1,2 +1,11 @@
-<p><%=fields%></p>
-
+<script type="text/template" id="select_template">
+  { %>
+  <h4>Category</h4>
+  <select class="select" id="category-select" name="category-select">
+  <option value="total" selected>Headline</option>
+  <% _.each(fields, function(fieldItem) { %>
+    <option value="<%=fieldItem.field%>"><%=translations.t(fieldItem.label)%></option>
+  <% }); %>
+  </select>
+  <% }
+</script>
