--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="category_template">
+<script type="text/template" id="categories_template">
   { %>
   <h4>Category</h4>
   <select class="select" id="category-select" name="category-select">
