--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,17 @@
 
 select {
   width: 100%;
+  height: 2.5rem;
+  border: 1px solid #ccc;
+  cursor: pointer !important;
+  font-size: 14px !important;
+  padding-left: 3px;
+}
+
+select:focus {
+    background-color: white !important;
+    box-shadow: none !important;
+    outline: 3px solid #ffdd00 !important;
 }
 
 label.toggle-switch {
