--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -3,7 +3,10 @@
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
     <% _.each(fields, function(fieldItem) { %>
-      <option value="<%=fieldItem.field%>"><%=translations.t(fieldItem.label)%></option>
+      <option value="<%=fieldItem.field%>" disabled><%=fieldItem.field%></option>
+      <% _.each(fieldItem.values, function(item) { %>
+						<option value="<%=item%>">- <%=item%></option>
+      <% }); %>
     <% }); %>
-  </select>
+  </select>  
 </script>
