--- a/_includes/components/indicator/comparison-template.html
+++ b/_includes/components/indicator/comparison-template.html
@@ -1,6 +1,5 @@
-<script type="text/template" id="comparison_template">
-  <% if(dataHasGlobalValues) { %>
-  <h4>Compare national and global data</h4>
+<div id="comparison" class="compare-toggle">
+  <h4 id="compare-toggle-title">Compare national and global data</h4>
   <p>
       National data refers to data reported by the UK.<br>
       Global data refers to data reported for the UK by the custodian agency.<br><br>
@@ -12,5 +11,4 @@
 			<span class="toggle-switch-handle" data-label-off="OFF" data-label-on="ON"></span>
 		</span>
   </label>
-  <% } %>
-</script>
+</div>
