--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -2,7 +2,7 @@
   <h4>Categories</h4>
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
-    <% _.each(fields, function(fieldItem) { %>
+    <% _.each(fieldsWithGlobalData, function(fieldItem) { %>
       <option value="<%=fieldItem.field%>" disabled><%=fieldItem.field%></option>
       <% _.each(fieldItem.values, function(item) { %>
 	<option value="<%=item.value%>">- <%=translations.t(item.value)%></option>
