--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -2,7 +2,7 @@
   <h4>Categories</h4>
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
-    <% _.each(fieldsWithGlobalData, function(fieldItem) { %>
+    <% _.each(fieldsWithGlobalValues, function(fieldItem) { %>
       <option value="<%=fieldItem.field%>" disabled><%=fieldItem.field%></option>
     <% }); %>
   </select>  
