--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -2,8 +2,13 @@
   <h4>Categories</h4>
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
-    <% _.each(fieldsWithGlobalValues, function(fieldItem) { %>
-      <option value="<%=fieldItem%>" disabled><%=fieldItem%></option>
+    <% _.each(fields, function(fieldItem) { %>
+      <% if(_.contains(fieldsWithGlobalData, fieldItem) { %>
+        <option value="<%=fieldItem.field%>" disabled><%=fieldItem.field%></option>
+        <% _.each(fieldItem.values, function(item) { %>
+	        <option value="<%=item.value%>">- <%=translations.t(item.value)%></option>
+        <% }); %>
+      <% }); %>
     <% }); %>
   </select>  
 </script>
