--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -3,7 +3,7 @@
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
     <% _.each(fields, function(fieldItem) { %>
-      <% if(_.contains(fieldsWithGlobalValues, fieldItem)) { %>
+      <% if(_.includes(fieldsWithGlobalValues, fieldItem)) { %>
         <option value="<%=fieldItem.field%>" disabled><%=fieldItem.field%></option>
         <% _.each(fieldItem.values, function(item) { %>
 	        <option value="<%=item.value%>">- <%=translations.t(item.value)%></option>
