--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -2,12 +2,12 @@
   <h4>Categories</h4>
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
-    <% _.each(fields, function(fieldItem) { %>
-      <% if(_.includes(fieldsWithGlobalValues, fieldItem.field)) { %>
-        <% _.each(fieldItem.values, function(item) { %>
-	        <option value="<%=item.value%>"><%=translations.t(fieldItem.field)%>: <%=translations.t(item.value)%></option>
-        <% }); %>
-      <% }; %>
+    <% _.each(fields, function(fieldItem) { %> 
+      <% _.each(fieldItem.values, function(item) { %>
+	<% if(_.includes(_.map(_.filter(fieldValuesWithGlobalReportingType, {'field': fieldItem.field}), 'values')[0], item)) { %>
+	  <option value="<%=item.value%>"><%=translations.t(fieldItem.field)%>: <%=translations.t(item.value)%></option>
+	<% }; %>
+      <% }); %>
     <% }); %>
   </select>  
 </script>
