--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -1,5 +1,5 @@
 <script type="text/template" id="categories_template">
-  <h4>Categories</h4>
+  <h4>Sub-categories</h4>
   <select class="select" id="category-select" name="category-select">
     <option value="total" selected>Headline</option>
 		<% _.each(fields, function(fieldItem) { %>
