--- a/_sass/components/_disaggregation_controls.scss
+++ b/_sass/components/_disaggregation_controls.scss
@@ -16,7 +16,13 @@
             display: none;
         }
     }
-    &.no-units.no-serieses.no-fields {
+    &no-global-data {
+        #toggles,
+        #categories {
+            display:none;
+        }
+    }
+    &.no-units.no-serieses.no-fields.no-global-data {
         > .col-md-3 {
             display: none;
         }
