--- a/_sass/components/_disaggregation_controls.scss
+++ b/_sass/components/_disaggregation_controls.scss
@@ -16,7 +16,7 @@
             display: none;
         }
     }
-    &no-global-data {
+    &.no-global-data {
         #toggles,
         #categories {
             display:none;
