--- a/_sass/components/_disaggregation_controls.scss
+++ b/_sass/components/_disaggregation_controls.scss
@@ -17,8 +17,7 @@
         }
     }
     &.no-global-data {
-        #toggles,
-        #categories {
+        #toggles {
             display:none;
         }
     }
