--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -2,17 +2,17 @@
 <div class="panel">
 <dl>
 <dt>Goal</dt>
-<dd>{{ page.indicator[SDG_GOAL__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_GOAL__GLOBAL'] }}</dd>
 <dt>Target</dt>
-<dd>{{ page.indicator[SDG_TARGET__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_TARGET__GLOBAL'] }}</dd>
 <dt>Indicator</dt>
-<dd>{{ page.indicator[SDG_INDICATOR__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_INDICATOR__GLOBAL'] }}</dd>
 <dt>Series</dt>
-<dd>{{ page.indicator[SDG_SERIES_DESCR__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_SERIES_DESCR__GLOBAL'] }}</dd>
 <dt>Related indicators</dt>
-<dd>{{ page.indicator[SDG_RELATED_INDICATORS__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_RELATED_INDICATORS__GLOBAL'] }}</dd>
 <dt>Custodian agencies</dt>
-<dd>{{ page.indicator[SDG_CUSTODIAN_AGENCIES__GLOBAL] }}</dd>
+<dd>{{ page.indicator['SDG_CUSTODIAN_AGENCIES__GLOBAL'] }}</dd>
 </dl>
 </div>
 
