--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -4,7 +4,7 @@
     <option value="total" selected>Headline</option>
 		<% _.each(fields, function(fieldItem) { %>
 			<% _.each(fieldItem.values, function(item) { %>
-				<% if(_.includes(_.map(_.filter(fieldValuesWithGlobalReportingType, {'field': fieldItem.field}), 'values')[0], item.value)) { %>
+				<% if(_.includes(_.map(_.filter(comparableFieldValues, {'field': fieldItem.field}), 'values')[0], item.value)) { %>
 					<option value="<%=item.value%>" data-field=<%=fieldItem.field%>><%=translations.t(fieldItem.field)%>: <%=translations.t(item.value)%></option>
 				<% }; %>
 			<% }); %>
