--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -13,7 +13,7 @@
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
+#national .active, .accordion:hover {
   background-color: #ccc;
 }
 
