--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -97,6 +97,10 @@ input, button, select, optgroup, textarea {
   line-height: inherit;
 }
 
+#toggles {
+  margin-bottom: 20px;
+}
+
 .toggle-switch-label {
   display: block;
   margin-bottom: 2px;
