--- a/_includes/components/indicator/categories-template.html
+++ b/_includes/components/indicator/categories-template.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="categories_template">
   <h4>Sub-categories</h4>
   <select class="select" id="category-select" name="category-select">
-    <option value="total" selected>Headline</option>
+    <option value="total" data-field="total" selected>Headline</option>
 		<% _.each(fields, function(fieldItem) { %>
 			<% _.each(fieldItem.values, function(item) { %>
 				<% if(_.includes(_.map(_.filter(comparableFieldValues, {'field': fieldItem.field}), 'values')[0], item.value)) { %>
