--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,4 +1,9 @@
 // Enter any custom Sass in this file.
+
+#fields .variable-selector[data-field="Reporting type"] {
+  display: none;
+}
+
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
   background-color: #eee;
