--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -1,19 +1,39 @@
-<button class="accordion">Indicator information</button>
-<div class="panel">
-<dl>
-<dt>Goal</dt>
-<dd>{{ page.indicator['SDG_GOAL__GLOBAL'] }}</dd>
-<dt>Target</dt>
-<dd>{{ page.indicator['SDG_TARGET__GLOBAL'] }}</dd>
-<dt>Indicator</dt>
-<dd>{{ page.indicator['SDG_INDICATOR__GLOBAL'] }}</dd>
-<dt>Series</dt>
-<dd>{{ page.indicator['SDG_SERIES_DESCR__GLOBAL'] }}</dd>
-<dt>Related indicators</dt>
-<dd>{{ page.indicator['SDG_RELATED_INDICATORS__GLOBAL'] }}</dd>
-<dt>Custodian agencies</dt>
-<dd>{{ page.indicator['SDG_CUSTODIAN_AGENCIES__GLOBAL'] }}</dd>
-</dl>
+<div class="accordion__section">
+  <div class="accordion__section-header">
+    <h2 class="accordion__section-heading">
+      <button class="accordion__section-button">
+        <span class="accordion__section-heading-text">
+          <span class="accordion__section-heading-text-focus">Indicator information</span>
+        </span>
+        <span class="visuallyhidden accordion__section-heading-divider">, </span>
+        <span class="accordion__section-toggle">
+          <span class="accordion__section-toggle-focus">
+            <span class="accordion-nav__chevron"></span>
+            <span class="accordion__section-toggle-text">
+              "Show"
+              <span class="visuallyhidden"> this section</span>
+            </span>
+          </span>
+        </span>
+      </button>
+    </h2>
+    <div class="accordion__section-content">
+      <dl>
+      <dt>Goal</dt>
+      <dd>{{ page.indicator['SDG_GOAL__GLOBAL'] }}</dd>
+      <dt>Target</dt>
+      <dd>{{ page.indicator['SDG_TARGET__GLOBAL'] }}</dd>
+      <dt>Indicator</dt>
+      <dd>{{ page.indicator['SDG_INDICATOR__GLOBAL'] }}</dd>
+      <dt>Series</dt>
+      <dd>{{ page.indicator['SDG_SERIES_DESCR__GLOBAL'] }}</dd>
+      <dt>Related indicators</dt>
+      <dd>{{ page.indicator['SDG_RELATED_INDICATORS__GLOBAL'] }}</dd>
+      <dt>Custodian agencies</dt>
+      <dd>{{ page.indicator['SDG_CUSTODIAN_AGENCIES__GLOBAL'] }}</dd>
+      </dl>
+    </div>
+  </div>
 </div>
 
 <button class="accordion">Data reporter</button>
