--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -5,7 +5,7 @@
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
-.accordion {
+accordion__section-button {
   background-color: #eee;
   color: #444;
   cursor: pointer;
