--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -292,7 +292,7 @@
 
 
 <script>
-var acc = document.getElementsByClassName("accordion");
+var acc = document.getElementsByClassName("accordion__section-button");
 var i;
 
 for (i = 0; i < acc.length; i++) {
