--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -8,7 +8,7 @@
         <span class="visuallyhidden accordion__section-heading-divider">, </span>
         <span class="accordion__section-toggle">
           <span class="accordion__section-toggle-focus">
-            <span class="accordion-nav__chevron"></span>
+            <span class="accordion-nav__chevron"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></span>
             <span class="accordion__section-toggle-text">
               "Show"
               <span class="visuallyhidden"> this section</span>
