--- a/_includes/components/indicator/metadata.html
+++ b/_includes/components/indicator/metadata.html
@@ -302,11 +302,11 @@ for (i = 0; i < acc.length; i++) {
     this.classList.toggle("active");
 
     /* Toggle between hiding and showing the active panel */
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
+    var accordion__section = this.nextElementSibling;
+    if (accordion__section.style.display === "block") {
+      accordion__section.style.display = "none";
     } else {
-      panel.style.display = "block";
+      accordion__section.style.display = "block";
     }
   });
 }
